# TCM-FuzzyWiki

./: .gitignore  README.md  pyproject.toml
colab/: TCM_FuzzyWiki_MiniMax_M3_Colab.ipynb
configs/: tcm_fuzzywiki.yaml
examples/: bootstrap_chapters.csv
tcm_fuzzywiki/: __init__.py  aggregation.py  assessment.py  audit.py  calibration.py  cli.py  config.py  cooccurrence.py  evaluation.py  extraction.py  inference.py  io.py  llmlite.py  mamdani.py  membership.py  methodology.py  models.py  network.py  normalize.py  pipeline.py  provenance.py  resume.py  roleplay.py  rules.py  validation.py  wiki.py
tests/: test_anthropic_adapter.py  test_assessment.py  test_audit_dynamic_status.py  test_calibration.py  test_cooccurrence_aggregation.py  test_evaluation_mamdani.py  test_input_robustness.py  test_llmlite_parsing.py  test_membership.py  test_normalize.py  test_pipeline.py  test_provenance.py  test_resume_extraction.py  test_roleplay.py  test_rules.py  test_validation.py
