[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-fuzzywiki"
version = "5.0.0"
description = "Observation-first fuzzy TCM classical text Wiki builder from XLSX chapters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "openpyxl>=3.1",
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tcm-fuzzywiki = "tcm_fuzzywiki.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["tcm_fuzzywiki*"]
